@@ -4,7 +4,6 @@ from twisted.trial import unittest
 from buildbot.changes.bonsaipoller import FileNode, CiNode, BonsaiResult, \
      BonsaiParser, BonsaiPoller, InvalidResultError, EmptyResult
 
-from StringIO import StringIO
 from copy import deepcopy
 import re
 
@@ -116,7 +115,7 @@ class FakeBonsaiPoller(BonsaiPoller):
 
 class TestBonsaiPoller(unittest.TestCase):
     def testFullyFormedResult(self):
-        br = BonsaiParser(StringIO(goodUnparsedResult))
+        br = BonsaiParser(goodUnparsedResult)
         result = br.getData()
         # make sure the result is a BonsaiResult
         self.failUnless(isinstance(result, BonsaiResult))
@@ -126,49 +125,49 @@ class TestBonsaiPoller(unittest.TestCase):
 
     def testBadUnparsedResult(self):
         try:
-            BonsaiParser(StringIO(badUnparsedResult))
+            BonsaiParser(badUnparsedResult)
             self.fail(badResultMsgs["badUnparsedResult"])
         except InvalidResultError:
             pass
 
     def testInvalidDateResult(self):
         try:
-            BonsaiParser(StringIO(invalidDateResult))
+            BonsaiParser(invalidDateResult)
             self.fail(badResultMsgs["invalidDateResult"])
         except InvalidResultError:
             pass
 
     def testMissingRevisionResult(self):
         try:
-            BonsaiParser(StringIO(missingRevisionResult))
+            BonsaiParser(missingRevisionResult)
             self.fail(badResultMsgs["missingRevisionResult"])
         except InvalidResultError:
             pass
 
     def testMissingFilenameResult(self):
         try:
-            BonsaiParser(StringIO(missingFilenameResult))
+            BonsaiParser(missingFilenameResult)
             self.fail(badResultMsgs["missingFilenameResult"])
         except InvalidResultError:
             pass
 
     def testDuplicateLogResult(self):
         try:
-            BonsaiParser(StringIO(duplicateLogResult))
+            BonsaiParser(duplicateLogResult)
             self.fail(badResultMsgs["duplicateLogResult"])
         except InvalidResultError:
             pass
 
     def testDuplicateFilesResult(self):
         try:
-            BonsaiParser(StringIO(duplicateFilesResult))
+            BonsaiParser(duplicateFilesResult)
             self.fail(badResultMsgs["duplicateFilesResult"])
         except InvalidResultError:
             pass
 
     def testMissingCiResult(self):
         try:
-            BonsaiParser(StringIO(missingCiResult))
+            BonsaiParser(missingCiResult)
             self.fail(badResultMsgs["missingCiResult"])
         except EmptyResult:
             pass
@@ -177,6 +176,6 @@ class TestBonsaiPoller(unittest.TestCase):
         "Make sure a change is not submitted if the BonsaiParser fails"
         poller = FakeBonsaiPoller()
         lastChangeBefore = poller.lastChange
-        poller._process_changes(StringIO(badUnparsedResult))
+        poller._process_changes(badUnparsedResult)
         # self.lastChange will not be updated if the change was not submitted
         self.failUnlessEqual(lastChangeBefore, poller.lastChange)
