@@ -1,3 +1,10 @@
+2007-09-29  Brian Warner  <warner@lothar.com>
+
+	* buildbot/changes/bonsaipoller.py: apply changes from the Mozilla
+	team, to fix some bugs and avoid the use of blocking urlopen().
+	closes #61.
+	* buildbot/test/test_bonsaipoller.py: same
+
 2007-09-28  Brian Warner  <warner@lothar.com>
 
 	* buildbot/buildslave.py (BuildSlave): add notify_on_missing=
